# survy

./: .markdownlint.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  \  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pypi.yml
skills/survey-analysis/: SKILL.md
skills/survey-analysis/references/: api_reference.md
src/survy/: __init__.py  errors.py  separator.py  separators.py
src/survy/analyze/: __init__.py  crosstab.py
src/survy/analyze/crosstab/: _utils.py  functions.py
src/survy/io/: _utils.py  csv.py  excel.py  json.py  polars.py  spss.py
src/survy/io/csv/: functions.py
src/survy/survey/: _utils.py  config.py  question.py  survey.py  variable.py
src/survy/survey/strategies/: base_strategy.py  multiselect_strategy.py  number_strategy.py  select_strategy.py
src/survy/utils/: functions.py  parse_id.py  spss.py
src/survy/variable/: _utils.py  variable.py
src/survy/variable/strategies/: base_strategy.py  multiselect_strategy.py  number_strategy.py  select_strategy.py
tests/fixtures/: test_data_01_compact.csv  test_data_01_normal.csv
tests/integration/: test_sample_workflow.py  test_sample_workflow_with_compact_data.py
tests/unit/: temp.py
tests/unit/analyze/: test_crosstab.py
tests/unit/io/: test_csv.py  test_io_csv.py  test_io_excel.py  test_io_json.py  test_io_polars.py  test_io_spss.py  test_json.py  test_read_data.py  test_read_polars.py
tests/unit/survey/: test_question.py  test_survey.py  test_variable.py
tests/unit/utils/: test_extract_mapping.py  test_parse_id.py  test_spss.py
