[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "survy"
version = "0.2.4"
description = "Process, transform and analyze survey-format data with clean and simple API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Operating System :: OS Independent",
]
dependencies = [
  "polars[excel]>=1.37.1",
  "numpy>2.0.0",
  "pyreadstat>1.3.0",
  "statsmodels>=0.14.0",
]
authors = [{ name = "Ha Hoang Hao", email = "hhhao.vn@gmail.com" }]

[project.optional-dependencies]
dev = ["pytest", "ruff", "coverage"]

[project.urls]
Homepage = "https://github.com/hoanghaoha/survy"
Repository = "https://github.com/hoanghaoha/survy"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/surpy"]
